--- a/diag_table_source_seperate_file.yaml
+++ b/diag_table_source_seperate_file.yaml
@@ -38,10 +38,10 @@ global_defaults:
             - output_freq_units
         - reduction_method
         - file_name_date
-    output_freq: 0  # integer: output sampling frequency in output_freq_units (0: every timestep; -1: only at end of run)
+    output_freq: 1  # integer: output sampling frequency in output_freq_units (0: every timestep; -1: only at end of run)
     output_freq_units: months  # time units for output: years, months, days, hours, minutes, or seconds
     file_format: 1  # integer, must be 1, specifying NetCDF (the only format currently supported)
-    time_axis_units: seconds  # time units for the output file time axis: years, months, days, hours, minutes, or seconds
+    time_axis_units: days  # time units for the output file time axis: years, months, days, hours, minutes, or seconds
     time_axis_name: time  # must be "time" (case-insensitive)
     new_file_freq: 1  # optional integer: frequency (in new_file_freq_units) for closing the existing file, and creating a new file
     new_file_freq_units: years  # time units for new_file_freq: years, months, days, hours, minutes, or seconds (optional; required if and only if new_file_freq specified)
@@ -54,7 +54,7 @@ global_defaults:
     output_name:  # same as field_name unless overridden
     # file_name:  # same as file_name in file section above unless overridden in diag_table section below
     time_sampling: all  # Currently not used.  Please use the string "all".
-    reduction_method: snap  # mean, snap, rms, pow##, min, max, or diurnal##
+    reduction_method: mean  # mean, snap, rms, pow##, min, max, or diurnal##
     # reduction_method options:
     #     mean or average or true: Average from the last time written to the current time. Becomes "average" in diag_table.
     #     snap or none or false: No reduction.  Write snapshot of current time step value only. Becomes "none" in diag_table.
@@ -191,6 +191,7 @@ diag_table:
     'monthly 3d squared fields':  # for calculating EKE etc
         defaults:  # these can be overridden for individual fields below
             file_name_dimension: 3d  # descriptor for filename, e.g. 3d, 2d, scalar
+            output_freq: 1  # integer: output sampling frequency in output_freq_units (0: every timestep; -1: only at end of run)
             reduction_method: pow02  # mean, snap, rms, pow##, min, max, or diurnal##
         fields:
             uo:
@@ -277,6 +278,7 @@ diag_table:
     'daily 2d fields':
         defaults:  # these can be overridden for individual fields below
             file_name_dimension: 2d  # descriptor for filename, e.g. 3d, 2d, scalar
+            output_freq: 1  # integer: output sampling frequency in output_freq_units (0: every timestep; -1: only at end of run)
             output_freq_units: days  # time units for output: years, months, days, hours, minutes, or seconds
         fields:
             mlotst:
@@ -293,6 +295,7 @@ diag_table:
     'daily 2d max fields':
         defaults:  # these can be overridden for individual fields below
             file_name_dimension: 2d  # descriptor for filename, e.g. 3d, 2d, scalar
+            output_freq: 1  # integer: output sampling frequency in output_freq_units (0: every timestep; -1: only at end of run)
             output_freq_units: days  # time units for output: years, months, days, hours, minutes, or seconds
             reduction_method: max  # mean, snap, rms, pow##, min, max, or diurnal##
         fields:
@@ -303,6 +306,7 @@ diag_table:
     'daily 2d min fields':
         defaults:  # these can be overridden for individual fields below
             file_name_dimension: 2d  # descriptor for filename, e.g. 3d, 2d, scalar
+            output_freq: 1  # integer: output sampling frequency in output_freq_units (0: every timestep; -1: only at end of run)
             output_freq_units: days  # time units for output: years, months, days, hours, minutes, or seconds
             reduction_method: min  # mean, snap, rms, pow##, min, max, or diurnal##
         fields:
@@ -329,6 +333,7 @@ diag_table:
                 - '':
                     - output_freq_units
                 - file_name_date
+            output_freq: 1  # integer: output sampling frequency in output_freq_units (0: every timestep; -1: only at end of run)
             output_freq_units: days  # time units for output: years, months, days, hours, minutes, or seconds
             reduction_method: snap  # mean, snap, rms, pow##, min, max, or diurnal##
             packing: 1  # double precision
@@ -354,3 +359,22 @@ diag_table:
             total_friver: # Area integrated liquid runoff into ocean total_lrunoff
             total_net_massout: # Area integrated mass leaving ocean due to evap and seaice form
             total_net_massin: # Area integrated mass entering ocean due to predip, runoff, ice melt
+            
+            
+
+
+
+
+
+
+
+
+
+
+            
+
+
+
+
+
+
